BradkenProduction/force-app/main/default/objects/Freight_Quote__c/Freight_Quote__c.object-meta.xml
<CustomObject>
    <description>Used to capture Freight Quote request details populated via Nintex Workflow Cloud form</description>
    <label>Freight Quote</label>
    <nameField>
        <displayFormat>FQN-{00000}</displayFormat>
        <label>Freight Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>