BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Air_Freight_Request_reason__c.field-meta.xml
<CustomField>
    <fullName>Air_Freight_Request_reason__c</fullName>
    <label>Air Freight Request reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing delays</fullName>
            </value>
            <value>
                <fullName>Unforeseen shipping delay</fullName>
            </value>
            <value>
                <fullName>Customer requirement changed</fullName>
            </value>
            <value>
                <fullName>Customer required date critical and cannot be changed</fullName>
            </value>
            <value>
                <fullName>Internal error with the order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>