BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Estimated_Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transit_Time__c</fullName>
    <formula>TEXT( Estimated_Transit_Time_Number__c ) + &quot; &quot; + TEXT( Transit_Time_Factor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Transit Time</label>
    <type>Text</type>
</CustomField>