BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Freight_Quote_Currency_to_AUD__c.field-meta.xml
<CustomField>
    <fullName>Freight_Quote_Currency_to_AUD__c</fullName>
    <description>Currency rate used to convert Freight Quote Currency to AUD. Populated via flow.</description>
    <label>Freight Quote Currency to AUD</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>