BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Freight_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>