BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Parent_Currency__c.field-meta.xml
<CustomField>
    <fullName>Parent_Currency__c</fullName>
    <formula>IF(NOT(ISBLANK( Quote__c )), TEXT( Quote__r.CurrencyIsoCode ),
IF(NOT(ISBLANK( Order__c )), TEXT( Order__r.CurrencyIsoCode ),
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Currency</label>
    <type>Text</type>
</CustomField>