BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated via Nintex Workflow Cloud</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>Freight_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>