BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Rate_Per_kg__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_kg__c</fullName>
    <description>Populate via NWC.</description>
    <label>Rate Per kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>