BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Request_Comments__c</fullName>
    <description>Populated via Nintex Workflow Cloud</description>
    <label>Request Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>