BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/RouteDetails__c.field-meta.xml
<CustomField>
    <fullName>RouteDetails__c</fullName>
    <label>Route Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>