BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Total_Cost_converted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_converted__c</fullName>
    <formula>(Total_Cost__c /  Freight_Quote_Currency_to_AUD__c) *  AUD_to_Quote_Order_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converted Total Cost according to Parent Quote/Order Currency</inlineHelpText>
    <label>Total Cost (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>