BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Transit_Time_Factor__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time_Factor__c</fullName>
    <description>Populated via Nintex Workflow Cloud</description>
    <label>Transit Time Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAYS</fullName>
            </value>
            <value>
                <fullName>WEEKS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>