BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>Populated via Nintex Workflow Cloud</description>
    <inlineHelpText>Date the Freight Quote is valid until</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>