BradkenProduction/force-app/main/default/objects/Freight_Quote__c/fields/What_is_the_Split__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Split__c</fullName>
    <label>What is the Split?</label>
    <type>TextArea</type>
</CustomField>